# hexapad

./: .gitignore  CMakeLists.txt  README.md
inc/: ComPort.h  mainwindow.h  master_thread.h
src/: CMakeLists.txt  ComPort.cpp  mainwindow.cpp  mainwindow.ui  master_thread.cpp  resources.qrc
